--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lib-flexible": "^0.3.2",
     "prop-types": "^15.8.1",
     "query-string": "^8.1.0",
+    "rc-field-form": "^1.29.2",
     "react": "^17.0.2",
     "react-captcha-code": "^1.0.7",
     "react-dom": "^17.0.2",
@@ -25,8 +26,6 @@
     "zarm": "^2.8.2"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "less": "^4.1.3",
     "postcss-pxtorem": "^6.0.0",
