--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "@types/node": "^20.2.5",
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "consola": "^2.15.3",
@@ -26,6 +29,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
+    "typescript": "^5.0.4",
     "zarm": "^2.8.2"
   },
   "devDependencies": {
