--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .js,.jsx",
-    "lint:fix": "eslint . --fix --ext .js,.jsx",
+    "lint": "eslint . --ext .js,.jsx.,.tsx",
+    "lint:fix": "eslint . --fix --ext .js,.jsx,.tsx",
     "prettier": "npx prettier src --check",
     "prettier:fix": "npm run prettier -- --write",
     "format": "npm run prettier:fix && npm run lint:fix"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "@types/echarts": "^4.9.18",
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "consola": "^2.15.3",
